# digital_brain

./: Cargo.toml  README.md  spirion_pong
examples/: download.rs  just_chatting.rs  load.rs  normal_pong.rs  normal_snake.rs  pong.rs  visual_simulation.rs
src/: axion.rs  axon.rs  brain.rs  consts.rs  grid.rs  input.rs  internal_consts.rs  lib.rs  main.rs  neuron.rs  output.rs  pos.rs
