[package]
name = "digital_brain"
version = "0.1.0"
edition = "2021"
authors     = ["Mohammed Vohra"]
description = "A digital brain"
license     = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
name = "digital_brain"
path = "src/lib.rs"

[dependencies]
macroquad = "0.4"
rayon = "1.10.0"
dashmap = "5"
